--- a/db/package.json
+++ b/db/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "csv-parse": "^5.3.6",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "iconv-lite": "^0.6.3"
   }
 }
